--- a/addons/auth_signup/views/auth_signup_login_templates.xml
+++ b/addons/auth_signup/views/auth_signup_login_templates.xml
@@ -83,6 +83,18 @@
                             <input type="text" name="login" t-att-value="login" id="login" class="form-control"
                                 autofocus="autofocus" required="required" autocapitalize="off"/>
                         </div>
+                        <div class="mb-3 field-login">
+                            <label for="mobile" class="col-form-label">Your Mobile</label>
+                            <input type="text" name="mobile" t-att-value="mobile" id="mobile" class="form-control"
+                                autofocus="autofocus" required="required" autocapitalize="off"/>
+                            <button t-if="not token" type="submit">Send</button>
+                        </div>
+                        <div t-if="send_otp" class="mb-3 field-login">
+                            <label for="otp" class="col-form-label">One Time Password</label>
+                            <input type="text" name="otp" t-att-value="otp" id="otp" class="form-control"
+                                autofocus="autofocus" autocapitalize="off"/>
+                            <button t-if="not token" type="submit">Confirm</button>
+                        </div>
                     </t>
 
                     <p class="alert alert-danger" t-if="error" role="alert">
@@ -91,7 +103,7 @@
                     <input type="hidden" name="redirect" t-att-value="redirect"/>
                     <input type="hidden" name="token" t-att-value="token"/>
                     <div class="clearfix oe_login_buttons d-grid mt-3">
-                        <button type="submit" class="btn btn-primary">Reset Password</button>
+                        <button type="submit" class="btn btn-secondary">Reset Password</button>
                         <div class="d-flex justify-content-between align-items-center small mt-2">
                             <a t-if="not token" t-attf-href="/web/login?{{ keep_query() }}">Back to Login</a>
                             <a t-if="invalid_token" href="/web/login">Back to Login</a>
